--- a/MALT.config
+++ b/MALT.config
@@ -6,7 +6,7 @@
 #               Parameters for interpolation                #
 [INTERPOLATOR]
 #Options: True or False
-interpolate = False
+interpolate = True
 #Must be function from interpolator.py
 interp_func = get_gp
 #Options: 'rand', 'start', or any float
@@ -27,8 +27,10 @@ ml_method = RFclassifier
 #Must be a dictionary
 hyperparams = {"n_estimators": np.arange(70,90),"criterion": ["gini", "entropy"]}
 #Integer
-n_jobs= 7
+n_jobs= -1
 #Options: True or False
 pca = True
 #Integer
 n_components = 20
+#Integer
+aug_num = 100
